--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "^2.2.0"
   },
   "dependencies": {
+    "easy-config": "^0.5.1",
     "fs-extra": "^0.26.2",
     "pretty-ms": "^2.1.0",
     "prettysize": "0.0.3",
